<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>io.github.icodegarden</groupId>
		<artifactId>commons</artifactId>
		<version>0.2.1</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<artifactId>commons-redis</artifactId>
	<packaging>jar</packaging>

	<name>${project.artifactId}</name>

	<properties>
		<java.version>1.8</java.version>
		
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.github.icodegarden</groupId>
			<artifactId>commons-lang</artifactId>
			<version>0.2.1</version>
		</dependency>
		<dependency>
			<groupId>io.github.icodegarden</groupId>
			<artifactId>commons-test</artifactId>
			<version>0.2.1</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>3.8.0</version><!-- redis自动依赖，尽管不是必须的，包含了同步通讯方式 -->
		</dependency>
		<dependency>
            <groupId>org.springframework.data</groupId>
			<artifactId>spring-data-redis</artifactId>
<!-- 			<version>2.5.2</version> -->
			<version>2.6.2</version><!-- 不能兼容jedis 4.0以上，因为内部依赖的GeoUnit类的package是不同的 -->
            <optional>true</optional><!--spring redis是可选的，包含了同步通讯方式 -->
        </dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.9.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.19.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.7.2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
